--- a/frontend/src/components/Header/header.module.css
+++ b/frontend/src/components/Header/header.module.css
@@ -104,3 +104,15 @@ header::before {
         font-size: 24px;
     }
   }
+
+  .avatar{
+    background-color: #62b8ff;
+    border-radius: 60px;
+    width: 40px;
+    height: 40px;
+    color:#fff;
+    display: grid;
+    place-content: center;
+    font-size: 18px;
+    font-weight: 600;
+  }
